--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
                     </ul>
                 </li>
             </ul>
+            <h4><img src="images/pt.png"> PLC tags</h4>
+            <ul>
+                <!-- Block -->
+                <li><a href="pdf/standard-variabletable.pdf"><img src="images/standard-variabletable.png"> Standard-Variablentabelle [68]</a></li>
+                <li><a href="pdf/plc_tags_input.pdf"><img src="images/tag_table.png"> Input [3]</a></li>
+                <li><a href="pdf/plc_tags_output.pdf"><img src="images/tag_table.png"> Output [3]</a></li>
+            </ul>
         </div>
 
         <div class="content">
