--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
     <div class="title">
-        <h2>Level controle</h2>
-        <p>This is a PLC programme for level controle. Code in TIA Portal V17. The tank has been modelled in Factory IO 3D simulation software.</p>
+        <a href="https://github.com/tentypcic/level-controle-factoryIO">
+        <h2>PLC programme viewer: <span style="color: #8898c1">Level controle</span></h2>
+         </a>
     </div>
 
     <div class="main">
