--- a/src/default.html
+++ b/src/default.html
@@ -16,7 +16,7 @@
         .centered-image {
             width: 75%;
             height: 75%;
-            background-image: url('images/work.gif');
+            background-image: url('work.gif');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
